manifests-local/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sumdrill-deployment
  namespace: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sumdrill
  template:
    metadata:
      labels:
        app: sumdrill
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         # Note: if there are multiple matchExpressions one must be satisfied
      #         # If the are multiple keys for matchExpressions all must be satisfied
      #         - matchExpressions:
      #             - key: network
      #               operator: In
      #               values:
      #                 - good
      #             - key: disk-type
      #               operator: In
      #               values:
      #                 - ssd

      containers:
        - name: test-box
          image: ubuntu:18.04
          command:
            - sleep
            - "infinity"
          imagePullPolicy: IfNotPresent

        - name: frontend-container
          image: pimpbot9000/sumdrill-frontend:latest
        - name: backend-container
          image: pimpbot9000/sumdrill-backend:latest
