manifests-local/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: project
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stateful-set
  namespace: project
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:        
        - name: postgres
          image: postgres:13.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
  volumeClaimTemplates:
    - metadata:
        name: postgres-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 200Mi
